--- a/pom.xml
+++ b/pom.xml
@@ -5369,6 +5369,10 @@
                         <artifactId>wstx-lgpl</artifactId>
                     </exclusion>
                     <exclusion>
+                        <groupId>stax</groupId>
+                        <artifactId>stax-api</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>ws-commons</groupId>
                         <artifactId>policy</artifactId>
                     </exclusion>
