--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,7 @@
                                             <exclude>jboss.web:jsp-api</exclude>
                                             <exclude>jboss.web:servlet-api</exclude>
                                             <exclude>net.sf.kxml:kxml2</exclude>
+                                            <exclude>org.apache.aries:*</exclude>
                                             <exclude>org.apache.geronimo.specs:geronimo-activation_1.1_spec</exclude>
                                             <exclude>org.apache.geronimo.specs:geronimo-jaxb_2.1_spec</exclude>
                                             <exclude>org.apache.geronimo.specs:geronimo-jaxr_1.0_spec</exclude>
@@ -1442,6 +1443,14 @@
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.aries</groupId>
+                        <artifactId>org.apache.aries.util</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-core</artifactId>
                     </exclusion>
@@ -1502,6 +1511,10 @@
                         <artifactId>jaxb-api</artifactId>
                     </exclusion>
                     <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.codehaus.jra</groupId>
                         <artifactId>jra</artifactId>
                     </exclusion>
@@ -1526,6 +1539,10 @@
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-transports-local</artifactId>
                     </exclusion>
@@ -1537,6 +1554,10 @@
                 <artifactId>cxf-rt-bindings-soap</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-tools-common</artifactId>
@@ -1574,6 +1595,10 @@
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-databinding-jaxb</artifactId>
                     </exclusion>
@@ -1585,6 +1610,10 @@
                 <artifactId>cxf-rt-core</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.ws.xmlschema</groupId>
                         <artifactId>xmlschema-core</artifactId>
@@ -1601,6 +1630,10 @@
                 <artifactId>cxf-rt-databinding-aegis</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-core</artifactId>
@@ -1623,6 +1656,10 @@
                 <artifactId>cxf-rt-frontend-jaxws</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>javax.xml.soap</groupId>
                         <artifactId>saaj-api</artifactId>
@@ -1706,6 +1743,12 @@
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-rt-frontend-simple</artifactId>
                 <version>${version.org.apache.cxf}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -1713,6 +1756,10 @@
                 <artifactId>cxf-rt-management</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-core</artifactId>
@@ -1757,6 +1804,10 @@
                 <artifactId>cxf-rt-transports-http</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.geronimo.specs</groupId>
                         <artifactId>geronimo-javamail_1.4_spec</artifactId>
@@ -1805,6 +1856,10 @@
                 <artifactId>cxf-rt-transports-jms</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-core</artifactId>
@@ -1866,6 +1921,10 @@
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-core</artifactId>
                     </exclusion>
@@ -1877,6 +1936,10 @@
                 <artifactId>cxf-rt-transports-common</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-api</artifactId>
@@ -1892,6 +1955,12 @@
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-rt-ws-addr</artifactId>
                 <version>${version.org.apache.cxf}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -1899,6 +1968,10 @@
                 <artifactId>cxf-rt-ws-rm</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-bindings-soap</artifactId>
@@ -1964,6 +2037,10 @@
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-bindings-soap</artifactId>
                     </exclusion>
@@ -2020,6 +2097,10 @@
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>xml-apis</groupId>
                         <artifactId>xml-apis</artifactId>
                     </exclusion>
@@ -2060,6 +2141,10 @@
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.apache.velocity</groupId>
                         <artifactId>velocity</artifactId>
                     </exclusion>
@@ -2075,6 +2160,10 @@
                 <artifactId>cxf-tools-java2ws</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-tools-common</artifactId>
@@ -2167,6 +2256,10 @@
                 <artifactId>cxf-tools-validator</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-tools-common</artifactId>
@@ -2268,6 +2361,10 @@
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>javax.xml.soap</groupId>
                         <artifactId>saaj-api</artifactId>
                     </exclusion>
@@ -2335,6 +2432,10 @@
                 <artifactId>cxf-tools-wsdlto-databinding-jaxb</artifactId>
                 <version>${version.org.apache.cxf}</version>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.aries.blueprint</groupId>
+                        <artifactId>org.apache.aries.blueprint.core</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-tools-common</artifactId>
