--- a/build-config/pom.xml
+++ b/build-config/pom.xml
@@ -29,7 +29,7 @@
     <parent>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-parent</artifactId>
-      <version>9</version>
+      <version>9-redhat-1</version>
     </parent>
 
     <groupId>org.jboss.as</groupId>
