--- a/pom.xml
+++ b/pom.xml
@@ -2130,6 +2130,14 @@
                         <groupId>org.bouncycastle</groupId>
                         <artifactId>bcprov-jdk15</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.opensaml</groupId>
+                        <artifactId>opensaml</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.opensaml</groupId>
+                        <artifactId>xmltooling</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
 
