--- a/pom.xml
+++ b/pom.xml
@@ -5273,6 +5273,38 @@
                         <artifactId>jboss-logging-log4j</artifactId>
                     </exclusion>
                     <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-aop</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-asm</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-beans</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-context</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-expression</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-tx</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-jms</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>javax.xml.stream.api</groupId>
                         <artifactId>stax-api</artifactId>
                     </exclusion>
@@ -5287,6 +5319,40 @@
                 <groupId>org.jboss.ws.cxf</groupId>
                 <artifactId>jbossws-cxf-factories</artifactId>
                 <version>${version.org.jboss.ws.cxf}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-aop</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-asm</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-beans</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-context</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-expression</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-tx</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-jms</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -5297,6 +5363,38 @@
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-aop</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-asm</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-beans</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-context</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-expression</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-tx</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-jms</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
@@ -5452,6 +5550,46 @@
                     <exclusion>
                         <groupId>org.jboss.jaxr</groupId>
                         <artifactId>juddi-service</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.picketbox</groupId>
+                        <artifactId>jboss-security-spi</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.picketbox</groupId>
+                        <artifactId>jbosssx</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-aop</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-asm</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-beans</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-context</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-expression</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-tx</artifactId>
+                    </exclusion>
+                    <exclusion>
+                         <groupId>org.springframework</groupId>
+                         <artifactId>spring-jms</artifactId>
                     </exclusion>
                </exclusions>
             </dependency>
