--- a/arquillian/container-managed-domain/pom.xml
+++ b/arquillian/container-managed-domain/pom.xml
@@ -37,7 +37,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <jboss.home>${project.basedir}/../../build/target/jboss-as-${jboss.as.release.version}</jboss.home>
+        <jboss.home>${project.basedir}/../../build/target/jboss-eap-6.0</jboss.home>
     </properties>
 
     <dependencies>
