--- a/arquillian/testng-integration/pom.xml
+++ b/arquillian/testng-integration/pom.xml
@@ -36,7 +36,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <jboss.home>${project.basedir}/../../build/target/jboss-as-${jboss.as.release.version}</jboss.home>
+        <jboss.home>${project.basedir}/../../build/target/jboss-eap-6.0</jboss.home>
     </properties>
 
     <dependencies>
