[JBPAPP-10238] Exclude tests downloading content from remote maven repository

--- a/subsystem-test/pom.xml
+++ b/subsystem-test/pom.xml
@@ -46,6 +46,9 @@
                     <includes>
                         <include>**/*TestCase.java</include>
                     </includes>
+                    <excludes>
+                        <exclude>org/jboss/as/subsystem/test/MavenURLResourceTestCase.java</exclude>
+                    </excludes>
                     <enableAssertions>false</enableAssertions>
                 </configuration>
             </plugin>
